src/test/ui/regions/regions-outlives-projection-trait-def.stderr
error: compilation successful
  --> $DIR/regions-outlives-projection-trait-def.rs:21:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

